# podserve

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTAINER-COMPARISON.md  IMPLEMENTATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  USAGE.md  benchmark.sh  performance_thresholds.py  pyproject.toml  python-implementation-prompt.md  simple.yaml
implementations/python-harmony/: CERTIFICATES-SERVICE-CHECKLIST.md  DNS-SERVICE-PLANNING.md  FIRST-SERVICE-LESSONS.md  PHASE4-INTEGRATION-PLAN.md  README.md  certificates-validation-report-20250618-113702.md  certificates-validation-report-20250618-114144.md  certificates-validation-report-20250618-114543.md  certificates-validation-report-20250618-114827.md  certificates-validation-report-20250618-115431.md  integration-test-report-20250618-120701.md  integration-test-report-20250618-120713.md  integration-test-report-20250618-120728.md  integration-test-report-20250618-120803.md  pyproject.toml  simple-integration-report-20250618-121027.md  simple-integration-report-20250618-121108.md
implementations/python-harmony/deploy/: certificates-dev.yaml
implementations/python-harmony/docker/: build-dev.sh
implementations/python-harmony/docker/base/: Dockerfile.developer  docker-entrypoint.sh  health-check.sh  requirements.txt
implementations/python-harmony/docker/certificates/: Dockerfile.developer  entrypoint.sh
implementations/python-harmony/docker/dns/: entrypoint.sh  (+1 more)
implementations/python-harmony/tests/: integration-certificate-consumer.yaml  run-integration-test.sh  simple-integration-test.sh  validate-certificates.sh
(+136 files in other folders)
