[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podserve-harmony"
version = "0.1.0"
description = "Python-Harmony: Systematic, documentation-driven PodServe implementation"
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "watchdog>=2.0.0",
    "cryptography>=3.4.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
podserve = "podserve.__main__:main"